# glacier-browser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/debug/include/glad/: glad.h
dependencies/glad/debug/src/: glad.c
dependencies/glad/release/include/glad/: glad.h
dependencies/glad/release/src/: glad.c
include/: application.h  button_element.h  colors.h  colortest_element.h  display_element.h  glfw.hpp  input_element.h  keyevent.h  logger.h  navigation_element.h  shader.h  text.h  texture.h
include/vk/: application.h
shaders/: regular.frag  regular.vert  text.frag  texture.frag  texture.vert
src/: application.cpp  button_element.cpp  colors.cpp  colortest_element.cpp  display_element.cpp  input_element.cpp  logger.cpp  main.cpp  navigation_element.cpp  shader.cpp  stb_image.cpp  text.cpp  texture.cpp
src/vk/: application.cpp  main.cpp
